# portfolio

./: .build.yml  .gitattributes  .gitignore  LICENSE  README.md  build-portfolio.yml  cdk.json  environment.yml  extract-dashboard.py  package-lock.json  package.json  private.py  pyproject.toml  tables.sql  views.sql
.github/workflows/: deploy.yml  test.yml  update.yml
cdk/: app.py
cdk/demo-function/: demo-portfolio.beancount  index.py  metadata.yaml  pyproject.toml  target_allocation.sql
cdk/function/: metadata.yaml  pyproject.toml
portfolio/: __init__.py  balances.py  bankwest.py  bitcoin.py  common.py  loanenquiry.com.au_bundle.pem  secrets.py  selfwealth.py  statecustodians.py  ubank.py  up.py  update_balances.py
portfolio/cdk/: .gitignore  app.py  lambda_function.py  metadata.json  metadata.py  pyproject.toml  targets.sql  views.sql
portfolio/cdk/demo-function/: demo-portfolio.beancount  metadata.yaml
portfolio/cdk/function/: index.py  metadata.json  metadata.yaml  pyproject.toml
portfolio/cdk/lambda-function/: lambda_function.py  pyproject.toml
tests/: __init__.py  test_bankwest.py  test_bitcoin.py  test_portfolio.py  test_selfwealth.py  test_statecustodians.py  test_ubank.py  test_up.py
