[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Brodie Blackburn <brodie.blackburn@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
requests = "^2.31.0"
beancount = "^2.3.6"
mechanicalsoup = "^1.3.0"
pyotp = "^2.9.0"
aws-cdk-lib = "^2.121.1"
"aws-cdk.aws-lambda-python-alpha" = "^2.121.1a0"
datasette = "^0.64.2"
ubank = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-balances = "portfolio.balances:update"
