[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
requests = "^2.31.0"
beancount = "^2.3.6"
pyotp = "^2.9.0"
aws-cdk-lib = "^2.121.1"
"aws-cdk.aws-lambda-python-alpha" = "^2.121.1a0"
datasette = "^0.64.2"
ubank = "^1.0.0"
authlib = "^1.3.0"
boto3 = "^1.34.112"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
