[project]
name = "portfolio"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beancount>=2.3.6",
    "pyotp>=2.9.0",
    "aws-cdk-lib>=2.121.1",
    "aws-cdk.aws-lambda-python-alpha>=2.121.1a0",
    "datasette>=0.64.2",
    "ubank>=1.0.0",
    "authlib>=1.3.0",
    "boto3>=1.34.112",
]

[dependency-groups]
dev = ["pytest>=7.4.4"]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "cdk/function",
]
