[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
mangum = "^0.17.0"
datasette = "^0.64.2"
datasette-auth-github = "^0.13.1"
datasette-redirect-forbidden = "^0.1"
datasette-dashboards = "^0.6.2"
datasette-hashed-urls = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
