[tool.poetry]
name = "lambda_function"
version = "0.1.0"
description = ""
authors = ["Brodie Blackburn <brodie.blackburn@gmail.com>"]
include = ["portfolio.db"]

[tool.poetry.dependencies]
python = "~3.9"
mangum = "^0.15.0"
datasette = "^0.61.1"
pysqlite-binary = "^0.5.1"
datasette-auth-github = "^0.13.1"
datasette-redirect-forbidden = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
