[tool.poetry]
name = "lambda-function"
version = "0.1.0"
description = ""
authors = ["Brodie Blackburn <brodie.blackburn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mangum = "^0.15.0"
datasette = "^0.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
